Updates from Overleaf

--- a/tex/id.tex
+++ b/tex/id.tex
@@ -16,7 +16,7 @@
 \major{计算机科学与技术}
 \keywords{数据挖掘，强化学习，信号灯控制，多智能体系统}
 
-\englishtitle{Deep reinforcement learning for multi-intersection traffic signal control}
+\englishtitle{Deep Reinforcement Learning for Multi-intersection Traffic Signal Control}
 \englishauthor{\textsc{Chacha Chen}}
 \englishadvisor{Prof. \textsc{Weinan Zhang}}
 % \englishcoadvisor{Prof. \textsc{Uom Uom}}
